--- a/SilverTest/SilverTest/MainWindow.xaml
+++ b/SilverTest/SilverTest/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
         xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:local="clr-namespace:SilverTest"
-        
+        xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
         xmlns:Feature="clr-namespace:BasicWaveChart.Feature.integral;assembly=BasicWaveChart"
         xmlns:System="clr-namespace:System;assembly=mscorlib"
         mc:Ignorable="d"
@@ -75,20 +75,16 @@
             <Menu Height="28" Width="{Binding ActualWidth, ElementName=dockPanel, Mode=OneWay}" DockPanel.Dock="Top" MouseLeftButtonDown="Menu_MouseLeftButtonDown">
                 <MenuItem  Height="28" Header="文件">
                     <MenuItem x:Name="savehistory" Header="保存现场" Click="savehistory_Click">
-                        <!--
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon  Kind="ContentSave" />
+                            <iconPacks:PackIconMaterial  Kind="ContentSave" />
                         </MenuItem.Icon>
-                        -->
                     </MenuItem>
                     <MenuItem x:Name="loadhistory" Header="载入现场" Click="loadhistory_Click"></MenuItem>
                     <MenuItem x:Name="loadkeyhistory" Header="载入关键数据" Click="loadkeyhistory_Click"></MenuItem>
                     <MenuItem x:Name="exportexcelmenu" Header="输出到excel" Click="exportexcelmenu_Click">
-                        <!--
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="FileExport" />
+                            <iconPacks:PackIconMaterial Kind="FileExport" />
                         </MenuItem.Icon>
-                        -->
                     </MenuItem>
                     <MenuItem Header="汞打印预览测试数据" Visibility="Collapsed"></MenuItem>
                     <MenuItem Header="汞打印测试数据" Visibility="Collapsed"></MenuItem>
@@ -109,19 +105,15 @@
                 </MenuItem>
                 <MenuItem  Height="28" Header="工具">
                     <MenuItem x:Name="printRmenu" Header="打印相关系数图" Click="printRmenu_Click">
-                        <!--
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="LocalPrintShop" />
+                            <iconPacks:PackIconMaterial Kind="Printer" />
                         </MenuItem.Icon>
-                        -->
                     </MenuItem>
                     <MenuItem x:Name="modifytestmenu" Header="修改测试数据" Click="modifytestmenu_Click" ></MenuItem>
                     <MenuItem x:Name="setportmenu" Header="设置串口" Click="setportmenu_Click">
-                        <!--
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="Usb" />
+                            <iconPacks:PackIconMaterial Kind="Usb" />
                         </MenuItem.Icon>
-                        -->
                     </MenuItem>
                 </MenuItem>
                 <MenuItem  Height="28" Header="测汞或砷" Visibility="Collapsed">
@@ -140,11 +132,9 @@
                 </MenuItem>
                 <MenuItem  Height="28" Header="登陆" Click="MenuItem_Click">
                     <MenuItem x:Name="checkerlogin" Header="审核者登陆" Click="checkerlogin_Click">
-                        <!--
                         <MenuItem.Icon>
-                            <materialDesign:PackIcon Kind="AccountStar" />
+                            <iconPacks:PackIconMaterial Kind="AccountStar" />
                         </MenuItem.Icon>
-                        -->
                     </MenuItem>
                     <MenuItem x:Name="checkerlogout" Header="审核者退出" Click="checkerlogout_Click"/>
                 </MenuItem>
@@ -159,26 +149,19 @@
                 <Canvas x:Name="disconnectedcanvas" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" >
                     <Button x:Name="rs232disconnectedbtn" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" Padding="0"
                         Background="Transparent" BorderThickness="0" ToolTip="串口未打开" Visibility="Visible" Click="rs232disconnectedbtn_Click">
-                        <!--
-                        <materialDesign:PackIcon Kind="Usb" Foreground="Black" Height="25" Width="25" Margin="3"/>
-                        -->
+                        <iconPacks:PackIconMaterial Kind="Usb" Foreground="Black" Height="25" Width="25" Margin="3"/>
                     </Button>
                     <Button x:Name="rs232disconnectedbtn_1" Width="28" Height="28" DockPanel.Dock="Right" Panel.ZIndex="2" Padding="0"
                         Background="Transparent" BorderThickness="0" ToolTip="串口未打开" Visibility="Visible" Click="rs232disconnectedbtn_Click">
-                        <!--
-                        <materialDesign:PackIcon Kind="CloseOctagonOutline" Foreground="Red" Height="35" Width="35" Margin="-2"/>
-                        -->
+                        <iconPacks:PackIconMaterial Kind="CloseOctagonOutline" Foreground="Red" Height="30" Width="30" Margin="-2"/>
                     </Button>                    
                 </Canvas>
-
                 <Canvas x:Name="rs232connectedBorder" Width="32" DockPanel.Dock="Right" Panel.ZIndex="9"
                         Visibility="Collapsed">
                     <Button x:Name="rs232connectedbtn" Width="28" Height="28" DockPanel.Dock="Right" Background="Transparent" BorderThickness="0" Click="rs232connectedbtn_Click" MouseEnter="rs232connectedbtn_MouseEnter" 
                             Padding="0"
                             MouseLeave="rs232connectedbtn_MouseLeave">
-                        <!--
-                        <materialDesign:PackIcon Kind="Usb" Foreground="Black" Height="28" Width="28"/>
-                        -->
+                        <iconPacks:PackIconMaterial Kind="Usb" Foreground="Black" Height="28" Width="28"/>
                     </Button>
                     <!--
                     <Canvas x:Name="tipinfocanvas" Canvas.Left="-100" Canvas.Top="50" 
@@ -423,7 +406,6 @@
                     <!--
                     <Button x:Name="statusBtn" Visibility="Hidden">测试中</Button>
                     -->
-
                     <Button x:Name="statusBtn" Visibility="Hidden" Cursor="Hand" Opacity="1" Grid.Column="3" Grid.Row="1" Grid.ColumnSpan="3" Grid.RowSpan="2" Foreground="#FF7C7C03">
                         <Button.Template>
                             <ControlTemplate TargetType="{x:Type Button}">
