--- a/SilverTest/SilverTest/ModifyDataWnd.xaml
+++ b/SilverTest/SilverTest/ModifyDataWnd.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SilverTest.ModifyDataWnd"
+﻿<Window x:Name="window" x:Class="SilverTest.ModifyDataWnd"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,32 +6,21 @@
         xmlns:local="clr-namespace:SilverTest"
         mc:Ignorable="d"
         WindowStartupLocation="CenterScreen"
-        Title="修改测试数据" Height="350" Width="450" Loaded="Window_Loaded">
-    <DockPanel>
-        <StackPanel x:Name="newGrid" Visibility="Collapsed" DockPanel.Dock="Top" Margin="0,20" Height="150">
-            <StackPanel Height="40" Orientation="Horizontal" Margin="0,0">
-                <Label HorizontalAlignment="Left" Margin="130,5,30,15" Width="100" Height="30" Content="响应值"></Label>
-                <TextBox x:Name="responsevaluetxt" Margin="0" Width="100" Height="30" ></TextBox>
-            </StackPanel>
-            <StackPanel Height="40" Orientation="Horizontal">
-                <Label HorizontalAlignment="Left" Margin="130,5,30,15" Width="100" Height="30" Content="取样时间"></Label>
-                <TextBox x:Name="sampletimetxt" Width="100" Height="30" ></TextBox>
-            </StackPanel>
-            <StackPanel Height="40" Orientation="Horizontal">
-                <Label HorizontalAlignment="Right" Margin="130,5,30,15" Width="100" Height="30" Content="流量" RenderTransformOrigin="0.829,0.451"/>
-                <TextBox x:Name="fluenttxt" Width="100" Height="30" />
-            </StackPanel>
-
-        </StackPanel>
-        <StackPanel x:Name="standardGrid" Visibility="Visible" DockPanel.Dock="Top">
-            <StackPanel Height="80" Orientation="Horizontal" Margin="0,30">
-                <Label HorizontalAlignment="Left" Margin="100,0,30,0" Width="100" Height="30" Content="响应值"></Label>
-                <TextBox x:Name="standardresponsetxt" Width="100" Height="30" ></TextBox>
-            </StackPanel>
-        </StackPanel>
-        <StackPanel Height="80" Orientation="Horizontal" DockPanel.Dock="Bottom">
-            <Button  x:Name="checkbtn" Width="60" Height="30" Margin="150,0,60,0" Click="checkbtn_Click" >审查</Button>
-            <Button  Width="60" Height="30" Margin="0,0" Click="Button_Click">取消</Button>
-        </StackPanel>
-    </DockPanel>
+        ResizeMode="NoResize"
+        Title="修改测试数据" Width="316.001" Height="234.667" 
+        Loaded="Window_Loaded" Icon="images/write.png">
+    <StackPanel>
+        <Canvas x:Name="newGrid" Visibility="Visible" Margin="0,20,0,0" Height="123">
+            <Label Width="60" Height="26" HorizontalContentAlignment="Right" Content="响应值" Canvas.Left="91" Canvas.Top="19"/>
+            <TextBox x:Name="responsevaluetxt" Width="80" Height="10" Canvas.Left="163" Canvas.Top="19" />
+            <Label x:Name="sampletimelable" Width="60" Height="26" HorizontalContentAlignment="Right" Content="取样时间" Canvas.Left="91" Canvas.Top="52"/>
+            <TextBox x:Name="sampletimetxt" Width="80" Height="20" Canvas.Left="163" Canvas.Top="52" ></TextBox>
+            <Label x:Name="fluentlabel" Width="60" Height="26" HorizontalContentAlignment="Right" Content="流量" Canvas.Left="91" Canvas.Top="83"/>
+            <TextBox x:Name="fluenttxt" Width="80" Height="20" Canvas.Left="163" Canvas.Top="83" IsEnabled="False"/>
+        </Canvas>
+        <Canvas Height="60">
+            <Button  x:Name="checkbtn" Width="60" Height="30" Click="checkbtn_Click" Content="审查" Canvas.Left="61" Canvas.Top="10" />
+            <Button  Width="60" Height="30" Click="Button_Click" Content="取消" Canvas.Left="203" Canvas.Top="10"/>
+        </Canvas>
+    </StackPanel>
 </Window>
